# sunshine

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MANIFESTO.md  README.md  RESEARCH.md  index.html  intro.html  open.html  print.html  searchindex.js  searchindex.json
.github/workflows/: compile.yml  recipes.yml
book/: book.toml
book/src/: SUMMARY.md  dem.md  democracy.md  intro.md  next.md  open.md  org.md  pallets.md
client/: Cargo.toml  README.md  embed.html  index.html  keybase.html  subxt.html
client-ffi/: Cargo.toml
client-ffi/src/: lib.rs
client/cli/: Cargo.toml
client/cli/src/: bank.rs  bounty.rs  bounty3.rs  donate.rs  error.rs  key.rs  lib.rs  org.rs  shares.rs  utils.rs  vote.rs  wallet.rs
client/client/: Cargo.toml
client/client/examples/: org.rs
client/client/src/: abstract.rs  client.rs  codec.rs  error.rs  lib.rs  runtime.rs  utils.rs
client/client/src/bank/: mod.rs  subxt.rs
client/client/src/bounty/: mod.rs  subxt.rs
client/client/src/bounty3/: mod.rs  subxt.rs
client/client/src/court/: mod.rs  subxt.rs
client/client/src/donate/: mod.rs  subxt.rs
client/client/src/org/: mod.rs  subxt.rs  utils.rs
client/client/src/srml/: bank.rs  bounty.rs  court.rs  donate.rs  mod.rs  org.rs  vote.rs
client/client/src/vote/: mod.rs  subxt.rs
client/examples/: org.rs  reserve_shares_and_watch.rs
client/ffi/: Cargo.toml
client/ffi/src/: dto.rs  error.rs  ffi.rs  lib.rs
client/ffi/tests/: impl_ffi_macro.rs
client/gbot/: Cargo.toml
client/gbot/examples/: bounty.rs  post_bounty_ctx.rs
client/gbot/src/: bounty.rs  error.rs  lib.rs  parser.rs  util.rs
client/src/: client.rs  error.rs  lib.rs  light_client.rs  runtime.rs  sunshine.rs
client/src/frame/: mod.rs  shares_atomic.rs  vote_yesno.rs
client/src/srml/: bank.rs  bounty.rs  court.rs  mod.rs  org.rs  shares_atomic.rs  vote.rs  vote_yesno.rs
client/tmp/db/: conf  db
docs/: README.md  bond.md  incentive.md  library.md  moloch.md  proposal.md  share.md  story.md  sunshine.md  sunshot.md
docs/code/: README.md
docs/drafts/: collusion.md  criteria.md  dcf.md  incentives.md  inflation.md  metagovernance.md  testing.md  voting.md
malkam/: Cargo.toml  README.md
malkam/runtime/: Cargo.toml
module/: Cargo.toml  README.md  doc.md  storage.md
module/src/: dao.rs  lib.rs  memcache.rs  test.rs
modules/: README.md
modules/auction/: README.md
modules/bank/: Cargo.toml
modules/bank-offchain/: Cargo.toml
modules/bank-onchain/: Cargo.toml
modules/bank/src/: lib.rs  mock.rs  tests.rs
modules/bounty/: Cargo.toml
modules/bounty/src/: lib.rs  tests.rs
modules/braq/: README.md
modules/committee/: Cargo.toml  README.md
modules/court/: Cargo.toml
modules/court/src/: lib.rs
modules/fund/: README.md
modules/membership/: Cargo.toml  README.md
modules/metagov/: README.md
modules/org/: Cargo.toml  TEMP.txt
modules/shares/: Cargo.toml
modules/shares-atomic/: Cargo.toml
modules/shares-atomic/src/: lib.rs  mock.rs  tests.rs
modules/shares-membership/: Cargo.toml
modules/src/: count.rs  dao.rs  lib.rs  test.rs
modules/template/: Cargo.toml
modules/template/src/: lib.rs
modules/util/: Cargo.toml
modules/util/src/: bank.rs  bounty.rs  court.rs  lib.rs  organization.rs  petition.rs  primitives.rs  proposal.rs  schedule.rs  share.rs  traits.rs  uid.rs  uuid.rs  vote.rs  voteyesno.rs
modules/vote/: Cargo.toml
modules/vote-consent/: Cargo.toml
modules/vote-petition/: Cargo.toml
modules/vote-petition/src/: lib.rs  mock.rs  tests.rs
modules/vote-threshold/: Cargo.toml
modules/vote-yesno/: Cargo.toml
modules/vote-yesno/src/: lib.rs  mock.rs  tests.rs
modules/voting/: Cargo.toml  README.md
molochameleon/: README.md
molochameleon/runtime/: Cargo.toml
node/: Cargo.toml  README.md
node/src/: chain_spec.rs  command.rs  lib.rs  main.rs  service.rs
node/src/subxt/: mod.rs  vote_yesno.rs
pallets/: bounty.html  index.html  org.html
pallets-util/: Cargo.toml
pallets-util/src/: bank.rs  bounty.rs  court.rs  lib.rs  organization.rs  proposal.rs  traits.rs  version.rs  vote.rs
pallets/bank/: Cargo.toml
pallets/bank/src/: lib.rs  tests.rs
pallets/bank2/: Cargo.toml  todo.txt
pallets/bench/: Cargo.toml  README.md
pallets/borda/: Cargo.toml
pallets/bounty/: Cargo.toml
pallets/bounty/src/: lib.rs  tests.rs
pallets/bounty2/: Cargo.toml
pallets/bounty3/: Cargo.toml
pallets/court/: Cargo.toml
pallets/doc/: Cargo.toml
pallets/doc/src/: lib.rs  tests.rs
pallets/donate/: Cargo.toml
pallets/donate/src/: lib.rs  tests.rs
pallets/drip/: Cargo.toml
pallets/grant/: Cargo.toml
pallets/grant/src/: lib.rs  tests.rs
pallets/insurance/: Cargo.toml
pallets/insurance/src/: lib.rs  tests.rs
pallets/kickback/: Cargo.toml
pallets/kickback/src/: lib.rs  tests.rs
pallets/meta/: Cargo.toml
pallets/moloch/: Cargo.toml
pallets/org/: Cargo.toml
pallets/org/src/: lib.rs  tests.rs
pallets/rank/: Cargo.toml
pallets/recovery/: Cargo.toml
pallets/recovery/src/: lib.rs  tests.rs
pallets/rfp/: Cargo.toml
pallets/treasury/: Cargo.toml
pallets/treasury/src/: lib.rs  tests.rs
pallets/util/: Cargo.toml
prototypes/: README.md
resources/: testnet-dist.json
runtime/: Cargo.toml  README.md  build.rs
runtime/genesis/: Cargo.toml
runtime/genesis/src/: lib.rs
runtime/main/: Cargo.toml  build.rs
runtime/main/src/: lib.rs
runtime/src/: constants.rs  dao.rs  lib.rs  metagov.rs  mock.rs  test.rs  types.rs  voting.rs
scripts/: cli_demo.sh  daemon.json  sync.sh
src/: chain_spec.rs  cli.rs  command.rs  main.rs  meta.rs  mock.rs  rpc.rs  service.rs
subxt/: Cargo.toml  README.md
subxt/src/: lib.rs  main.rs  shares_atomic.rs  vote_yesno.rs
sunshine/: Cargo.toml
templates/: README.md
utils/: Cargo.toml
utils/src/: bank.rs  borda.rs  bounty.rs  bounty2.rs  bounty3.rs  cid.rs  court.rs  doc.rs  drip.rs  grant.rs  kickback.rs  lib.rs  mask.rs  meta.rs  moloch.rs  organization.rs  rank.rs  rfp.rs  share.rs  sss.rs  traits.rs  vote.rs
(+97 files in other folders)
