[profile.release]
panic = "unwind"

[workspace]
members = [
    "bin/cli",
    "bin/client",
    "bin/runtime",
    "bin/node",
    "client/cli",
    "client/client",
    "client/ffi",
    "client/gbot",
    "pallets/bank",
    "pallets/bench",
    "pallets/bounty",
    "pallets/bounty2",
    "pallets/court",
    "pallets/donate",
    "pallets/drip",
    "pallets/grant",
    "pallets/insurance",
    "pallets/kickback",
    "pallets/moloch",
    "pallets/org",
    "pallets/rank",
    "pallets/rfp",
    "pallets/recovery",
    "pallets/treasury",
    "pallets/vote",
    "pallets/vote-direct",
    "utils",
]
