[package]
name = "sunshine-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to the sunshine node via RPC"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
async-std = "=1.5.0"
ipld-block-builder = "0.3.0"
libipld = { version = "0.3.0", features = ["dag-json"] }
serde = { version = "1.0.111", features = ["derive"] }
# TODO export error in libipld
sled = "0.32.0-rc1"
serde_json = "1.0.53"
ipfs-embed = "0.1.0"
# point at git master, could be done with patch.crates.io = giturl
substrate-subxt = "0.8.0"
surf = "1.0.3"
thiserror = "1.0.19"
utils-identity = { version = "0.1.0", path = "../utils" }
# substrate
sp-runtime = { version = "2.0.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc2"
pallet-indices = "2.0.0-rc2"
# local deps
util = { package = "sunshine-util", path = "../modules/util", default-features = false }
membership = { package = "sunshine-membership", path = "../modules/membership", default-features = false }
shares-membership = { package = "sunshine-shares-membership", path = "../modules/shares-membership", default-features = false }
shares-atomic = { package = "sunshine-shares-atomic", path = "../modules/shares-atomic", default-features = false }
sunshine-org = {package = "sunshine-org", path = "../modules/org", default-features=false }
vote-yesno = { package = "sunshine-vote-yesno", path = "../modules/vote-yesno", default-features = false}
vote-petition = { package = "sunshine-vote-petition", path = "../modules/vote-petition", default-features=false}
bank-onchain = { package = "sunshine-bank-onchain", path = "../modules/bank-onchain", default-features=false}
bank-offchain = { package = "sunshine-bank-offchain", path = "../modules/bank-offchain", default-features=false}
bounty = { package = "sunshine-bounty", path = "../modules/bounty", default-features=false}

[dev-dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
env_logger = "0.7.1"
sp-keyring = "2.0.0-rc2"

