[package]
name = "sunshine-client"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to the sunshine node via RPC"
keywords = ["sunshine", "substrate", "blockchain"]

#[features]
#light-client = ["substrate-subxt/light-client", "sunshine-node"]

[dependencies]
async-std = { version = "=1.5.0", features = ["unstable"] }
async-trait = "0.1.36"
ipld-block-builder = "0.3.0"
libipld = { version = "0.3.0", features = ["dag-json"] }
serde = { version = "1.0.111", features = ["derive"] }
sled = "0.32.0-rc1"
serde_json = "1.0.53"
ipfs-embed = "0.1.1"
substrate-subxt = "0.10.1"
surf = "1.0.3"
thiserror = "1.0.19"
sp-runtime = { version = "2.0.0-rc4", default-features = false }
sp-core = { version = "2.0.0-rc4", default-features = false }
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc4"
pallet-indices = "2.0.0-rc4"
sunshine-node = { path = "../bin/node", default-features = false, optional = true }
keystore = {package = "keybase-keystore", git = "https://github.com/sunshine-protocol/substrate-identity"}
# local deps
utils-identity = {package = "sunshine-identity-utils", git = "https://github.com/sunshine-protocol/substrate-identity", default-features=false}
util = { package = "sunshine-util", path = "../pallets-util", default-features = false }
org = {package = "sunshine-org", path = "../pallets/org", default-features=false }
vote = { package = "sunshine-vote", path = "../pallets/vote", default-features=false}
bank = { package = "sunshine-bank", path = "../pallets/bank", default-features=false}
bounty = { package = "sunshine-bounty", path = "../pallets/bounty", default-features=false}

[dev-dependencies]
async-std = { version = "=1.5.0", features = ["attributes"] }
env_logger = "0.7.1"
sp-keyring = "2.0.0-rc4"
