[package]
authors = ['4meta5']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL3'
name = 'sunshine-node'
repository = 'https://joinsunshine.com'
version = '0.0.1'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate.git"
package = 'substrate-build-script-utils'
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = 'sc-finality-grandpa'
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.grandpa-primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = 'sp-finality-grandpa'
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.suntime]
path = '../runtime'
version = '0.0.1'

[dependencies.sc-basic-authorship]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-cli]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-client]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-client-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.sc-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-executor]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-network]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-service]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sc-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.sp-consensus]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '0.8.0-alpha.5'

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
rev='8c1858048148c1c717123b0e4d360f8ad1be5bf2'
version = '2.0.0-alpha.5'

[[bin]]
name = 'sunshine-node'