[package]
authors = ['4meta5']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL3'
name = 'sunshine-node'
repository = 'https://joinsunshine.com'
version = '0.0.1'

[build-dependencies]
substrate-build-script-utils = "2.0.0-alpha.7"
vergen = "3.1.0"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
sc-basic-authorship = { version = "0.8.0-alpha.7", default-features = false }
sc-cli = { version = "0.8.0-alpha.7", default-features = false }
sc-consensus = { version = "0.8.0-alpha.7", default-features = false }
sc-client-api = { version = "2.0.0-alpha.7", default-features = false }
sc-consensus-aura = { version = "0.8.0-alpha.7", default-features = false }
sc-executor = { version = "0.8.0-alpha.7", default-features = false }
sc-finality-grandpa = { version = "0.8.0-alpha.7", default-features = false }
sc-network = { version = "0.8.0-alpha.7", default-features = false }
sc-service = { version = "0.8.0-alpha.7", default-features = false }
sc-transaction-pool = { version = "2.0.0-alpha.7", default-features = false }
sp-consensus = { version = "0.8.0-alpha.7", default-features = false }
sp-consensus-aura = { version = "0.8.0-alpha.7", default-features = false }
sp-core = { version = "2.0.0-alpha.7", default-features = false }
sp-finality-grandpa = { version = "2.0.0-alpha.7", default-features = false }
sp-inherents = { version = "2.0.0-alpha.7", default-features = false }
sp-runtime = { version = "2.0.0-alpha.7", default-features = false }
sp-transaction-pool = { version = "2.0.0-alpha.7", default-features = false }
suntime = { path = "../runtime" }
structopt = "0.3.13"

[[bin]]
name = 'sunshine-node'
