[package]
name = 'sunshine-node'
version = '0.0.1'
authors = ['4meta5']
edition = '2018'

license = 'GPL3'
description = 'Sunshine substrate node.'
homepage = 'https://joinsunshine.com'
repository = 'https://github.com/web3garden/sunshine-node'

[build-dependencies]
substrate-build-script-utils = "2.0.0-rc2"
vergen = "3.1.0"

[dependencies]
futures = "0.3.5"
log = "0.4.8"
sc-basic-authorship = { version = "0.8.0-rc2", default-features = false }
sc-cli = { version = "0.8.0-rc2", default-features = false }
sc-consensus = { version = "0.8.0-rc2", default-features = false }
sc-client-api = { version = "2.0.0-rc2", default-features = false }
sc-consensus-aura = { version = "0.8.0-rc2", default-features = false }
sc-executor = { version = "0.8.0-rc2", default-features = false }
sc-finality-grandpa = { version = "0.8.0-rc2", default-features = false }
sc-network = { version = "0.8.0-rc2", default-features = false }
sc-service = { version = "0.8.0-rc2", default-features = false }
sc-transaction-pool = { version = "2.0.0-rc2", default-features = false }
sp-consensus = { version = "0.8.0-rc2", default-features = false }
sp-consensus-aura = { version = "0.8.0-rc2", default-features = false }
sp-core = { version = "2.0.0-rc2", default-features = false }
sp-finality-grandpa = { version = "2.0.0-rc2", default-features = false }
sp-inherents = { version = "2.0.0-rc2", default-features = false }
sp-runtime = { version = "2.0.0-rc2", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc2", default-features = false }
suntime = { path = "../runtime" }

# node dependencies
sc-cli = { version = "0.8.0-alpha.7", default-features = false, optional = true }
structopt = { version = "0.3.14", optional = true }

[features]
default = ["cli"]
cli = ["sc-cli", "sc-service/db", "structopt"]

[[bin]]
name = 'sunshine-node'
required-features = ["cli"]
