[package]
authors = ['4meta5']
edition = '2018'
homepage = 'https://joinsunshine.com'
license = 'GPLv3'
name = 'suntime'
repository = 'https://github.com/web3garden/sunshine-node/'
version = '0.0.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-indices/std',
    'pallet-randomness-collective-flip/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-sudo/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',

    'bank/std',
    'shares-atomic/std',
    'vote-yesno/std',
]

[build-dependencies]
substrate-wasm-builder-runner = "1.0.6"

[dependencies]
codec = { version = "1.2.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
frame-executive = { version = "2.0.0-alpha.7", default-features = false }
frame-support = { version = "2.0.0-alpha.7", default-features = false }
frame-system = { version = "2.0.0-alpha.7", default-features = false }
pallet-aura = { version = "2.0.0-alpha.7", default-features = false }
pallet-balances = { version = "2.0.0-alpha.7", default-features = false }
pallet-grandpa = { version = "2.0.0-alpha.7", default-features = false }
pallet-indices = { version = "2.0.0-alpha.7", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-alpha.7", default-features = false }
pallet-sudo = { version = "2.0.0-alpha.7", default-features = false }
pallet-timestamp = { version = "2.0.0-alpha.7", default-features = false }
pallet-transaction-payment = { version = "2.0.0-alpha.7", default-features = false }
sp-api = { version = "2.0.0-alpha.7", default-features = false }
sp-block-builder = { version = "2.0.0-alpha.7", default-features = false }
sp-consensus-aura = { version = "0.8.0-alpha.7", default-features = false }
sp-core = { version = "2.0.0-alpha.7", default-features = false }
sp-inherents = { version = "2.0.0-alpha.7", default-features = false }
sp-io = { version = "2.0.0-alpha.7", default-features = false }
sp-offchain = { version = "2.0.0-alpha.7", default-features = false }
sp-runtime = { version = "2.0.0-alpha.7", default-features = false }
sp-session = { version = "2.0.0-alpha.7", default-features = false }
sp-std = { version = "2.0.0-alpha.7", default-features = false }
sp-transaction-pool = { version = "2.0.0-alpha.7", default-features = false }
sp-version = { version = "2.0.0-alpha.7", default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }
bank = { path = "../modules/bank", default-features = false }
shares-atomic = { path = "../modules/shares-atomic", default-features = false }
vote-yesno = { path = "../modules/vote-yesno", default-features = false }
