[package]
authors = ['4meta5']
edition = '2018'
homepage = 'https://joinsunshine.com'
license = 'GPLv3'
name = 'suntime'
repository = 'https://github.com/sunshine-protocol/sunshine-node/'
version = '0.0.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-indices/std',
    'pallet-randomness-collective-flip/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-sudo/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'util/std',
    'org/std',
]

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc3'
version = '1.0.5'

[dependencies]
codec = { version = "1.3.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
frame-executive = { version = "2.0.0-rc3", default-features = false }
frame-support = { version = "2.0.0-rc3", default-features = false }
frame-system = { version = "2.0.0-rc3", default-features = false }
pallet-aura = { version = "2.0.0-rc3", default-features = false }
pallet-balances = { version = "2.0.0-rc3", default-features = false }
pallet-grandpa = { version = "2.0.0-rc3", default-features = false }
pallet-indices = { version = "2.0.0-rc3", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-rc3", default-features = false }
pallet-sudo = { version = "2.0.0-rc3", default-features = false }
pallet-timestamp = { version = "2.0.0-rc3", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc3", default-features = false }
sp-api = { version = "2.0.0-rc3", default-features = false }
sp-block-builder = { version = "2.0.0-rc3", default-features = false }
sp-consensus-aura = { version = "0.8.0-rc3", default-features = false }
sp-core = { version = "2.0.0-rc3", default-features = false }
sp-inherents = { version = "2.0.0-rc3", default-features = false }
sp-io = { version = "2.0.0-rc3", default-features = false }
sp-offchain = { version = "2.0.0-rc3", default-features = false }
sp-runtime = { version = "2.0.0-rc3", default-features = false }
sp-session = { version = "2.0.0-rc3", default-features = false }
sp-std = { version = "2.0.0-rc3", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc3", default-features = false }
sp-version = { version = "2.0.0-rc3", default-features = false }
serde = { version = "1.0.101", features = ["derive"], optional = true }
# local deps
util = { package = "sunshine-util", path = "../modules/util", default-features=false}
org = {package = "sunshine-org", path = "../modules/org", default-features=false }
vote = { package = "sunshine-vote", path = "../modules/vote", default-features=false}
bank = { package = "sunshine-bank", path = "../modules/bank", default-features=false}
bounty = { package = "sunshine-bounty", path = "../modules/bounty", default-features=false}