[package]
name = "sunshine-subxt"
version = "0.0.1"
authors = ["4meta5"]
edition = "2018"

[[bin]]
name = 'sunshine-subxt'

[dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate.git", version = "2.0.0-alpha.5", rev="8c1858048148c1c717123b0e4d360f8ad1be5bf2", default-features = false }
async-std = "1.2.0"
env_logger = "0.7"
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
substrate-subxt = { path = "../../substrate-subxt", version = "0.5", default-features=false}
frame-support = { git = "https://github.com/paritytech/substrate.git", version = "2.0.0-alpha.5", rev="8c1858048148c1c717123b0e4d360f8ad1be5bf2", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", version = "2.0.0-alpha.5", rev="8c1858048148c1c717123b0e4d360f8ad1be5bf2", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", version = "2.0.0-alpha.5", rev="8c1858048148c1c717123b0e4d360f8ad1be5bf2", default-features = false }
util = {path = "../modules/util", default-features=false}
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
]