[package]
name = "utils-identity"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "codec/std",
    "libipld",
    "serde",
]

[dependencies]
codec = { version = "1.3.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
libipld = { version = "0.3.0", default-features = false, optional = true }
serde = { version = "1.0.101", features = ["derive"], optional = true }
