[package]
name = "sunshine-bounty-utils"
version = "0.2.0"
authors = ["Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"
description = "objects and relationships for sunshine-bounty pallets"
keywords = ["sunshine", "substrate", "voting"]

[dependencies]
derive-new = { version = "0.5.8", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false }
sp-runtime = { version = "2.0.0-rc6", default-features = false }
frame-support = { version = "2.0.0-rc6", default-features = false }
sp-core = { version = "2.0.0-rc6", default-features = false }
orml-utilities = { version = "0.1.1", default-features = false }
clear_on_drop = { version = "0.2.4", features = ["no_cc"] } # https://github.com/paritytech/substrate/issues/4179

[dev-dependencies]
sp-io = { version = "2.0.0-rc6", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
    "sp-core/std",
    "sp-std/std",
    "orml-utilities/std",
]
