[package]
name = "sunshine-bounty-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"
description = "Cli interface for the Sunshine Bounty Modules"
license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"

[dependencies]
async-trait = "0.1.36"
clap = "3.0.0-beta.1"
codec = { version = "1.3.0", package = "parity-scale-codec" }
bounty-client = { version = "0.1.0", package = "sunshine-bounty-client", path = "../client" }
keystore = {package = "keybase-keystore", git = "https://github.com/sunshine-protocol/substrate-identity"}
libipld = "0.3.0"
rpassword = "4.0.5"
substrate-subxt = "0.10.1"
textwrap = { version = "0.12.1", features = ["terminal_size"] }
thiserror = "1.0.20"
utils-identity = {package = "sunshine-identity-utils", git = "https://github.com/sunshine-protocol/substrate-identity", default-features=false}
util = { package = "sunshine-bounty-utils", path = "../../utils", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "utils-identity/std",
]
