[package]
name = "sunshine-bounty-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"
description = "Cli interface for the Sunshine Bounty Modules"
license = "GPL-3.0"
repository = "https://github.com/sunshine-protocol/sunshine-bounty"

[dependencies]
clap = "3.0.0-beta.1"
parity-scale-codec = { version = "1.3.4" }
ipld-block-builder = "0.3.0"
libipld = "0.3.0"
regex = "1.3.9"
substrate-subxt = "0.10.1"
sunshine-bounty-client = { path = "../client" }
sunshine-bounty-utils = { path = "../../utils" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
thiserror = "1.0.20"
