[package]
name = "sunshine-bounty-client"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to the sunshine node via RPC"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
async-std = { version = "1.6.2", features = ["unstable"] }
async-trait = "0.1.36"
codec = { version = "1.3.0", package = "parity-scale-codec" }
frame-support = "2.0.0-rc5"
ipld-block-builder = "0.4.1"
libipld = { version = "0.3.0", features = ["dag-json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
substrate-subxt = "0.10.1"
sunshine-bounty-utils = { path = "../../utils" }
sunshine-core = "0.2.0"
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
rand = "0.7.3"
test-client = { path = "../../bin/client", features = ["mock"] }
