[package]
name = "sunshine-bounty-client"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>, Amar Singh <asinghchrony@protonmail.com>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
description = "Submit extrinsics (transactions) to the sunshine node via RPC"
keywords = ["sunshine", "substrate", "blockchain"]

[dependencies]
async-std = { version = "1.6.2", features = ["unstable"] }
codec = { version = "1.3.4", package = "parity-scale-codec" }
frame-support = "2.0.0-rc6"
ipld-block-builder = "0.4.1"
libipld = { version = "0.3.1", features = ["dag-json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
substrate-subxt = "0.11.0"
sunshine-bounty-utils = { path = "../../utils" }
sunshine-client-utils = { git = "https://github.com/sunshine-protocol/sunshine-core" }
thiserror = "1.0.20"

# work around lack of dynamic event decoding in subxt
sunshine-faucet-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }
sunshine-identity-client = { git = "https://github.com/sunshine-protocol/sunshine-identity" }

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.7.1"
rand = "0.7.3"
test-client = { path = "../../bin/client", features = ["mock"] }
